--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -992,6 +992,10 @@ egressGateway:
 # This value corresponds to the configured cluster-cidr.
 # ipv4NativeRoutingCIDR:
 
+# -- Specify the IPv6 CIDR for native routing (ie to avoid IP masquerade for).
+# This value corresponds to the configured cluster-cidr.
+# ipv6NativeRoutingCIDR:
+
 monitor:
   # -- Enable the cilium-monitor sidecar.
   enabled: false
